--- a/public/callback-cross-auth.html
+++ b/public/callback-cross-auth.html
@@ -2,8 +2,8 @@
     <script src="https://cdn.auth0.com/js/auth0/9.0.0/auth0.min.js"></script>
     <script type="text/javascript">
         var auth0 = new auth0.WebAuth({
-            clientID: 'jhzGFZHTv8ehpGskVKxZr_jXOAvKg7DU',
-            domain: 'login.jurbly.com',
+            clientID: '4iZ4LA4Xyw8xKvjmU3oHdWtIz1TQhmgB',
+            domain: 'dev--sdco1d1.us.auth0.com',
             redirectUri: 'http://localhost:8000/callback'
         });
         auth0.crossOriginVerification();
