--- a/public/callback-cross-auth.html
+++ b/public/callback-cross-auth.html
@@ -3,7 +3,7 @@
     <script type="text/javascript">
         var auth0 = new auth0.WebAuth({
             clientID: '4iZ4LA4Xyw8xKvjmU3oHdWtIz1TQhmgB',
-            domain: 'dev--sdco1d1.us.auth0.com',
+            domain: 'jurbly.com',
             redirectUri: 'http://localhost:8000/callback'
         });
         auth0.crossOriginVerification();
