--- a/public/callback-cross-auth.html
+++ b/public/callback-cross-auth.html
@@ -4,7 +4,7 @@
         var auth0 = new auth0.WebAuth({
             clientID: '4iZ4LA4Xyw8xKvjmU3oHdWtIz1TQhmgB',
             domain: 'dev--sdco1d1.us.auth0.com',
-            redirectUri: 'http://localhost:8000/callback'
+            redirectUri: 'http://recruiter.jurbly.com/callback'
         });
         auth0.crossOriginVerification();
     </script>
